[gd_scene load_steps=6 format=2]

[ext_resource path="res://sounds/enter room.wav" type="AudioStream" id=1]
[ext_resource path="res://shaders_and_materials/CircleShader.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/Door/Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.59323, 11.1652 )

[sub_resource type="Animation" id=2]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "next_level"
} ]
}

[node name="Door" type="Area2D"]
script = ExtResource( 3 )

[node name="circle_transition" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]

[node name="door_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = 10.0
bus = "Effects"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="next_level"]
